--- a/view/layouts/header.html
+++ b/view/layouts/header.html
@@ -17,11 +17,10 @@
 <body>
   <header>
     <nav class="sidenav">
-      <div class="nav-items">
-        <a href="/">Time to work!</a>
-        <a href="/departments">Отделы</a>
-        <a href="/employees">Сотрудники</a>
-        <a href="/tasks">Задачи</a>
-      </div>
+      <a href="/" class="active">Time to work</a>
+      <a href="/departments">Отделы</a>
+      <a href="/employees">Сотрудники</a>
+      <a href="/tasks">Задачи</a>
     </nav>
   </header>
+  <div class="content">
