--- a/view/css/style.css
+++ b/view/css/style.css
@@ -1,26 +1,51 @@
-body {
-    margin-left: 200px;
-}
 .sidenav{
-    height: 100%;
+    margin: 0;
+    padding: 0;
     width: 200px;
+    background-color: #f1f1f1;
     position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-}
-.nav-items a {
-    padding: 6px 6px 6px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
+    height: 100%;
+    overflow: auto;
 }
 
-.nav-items a:hover {
-    color: #f1f1f1;
+.sidenav a {
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+}
+
+.sidenav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.sidenav a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
+div.content {
+    margin-left: 200px;
+    padding: 5px 10px;
+    height: 100%;
+}
+
+@media screen and (max-width: 700px) {
+    .sidenav {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    .sidenav a {float: left;}
+    div.content {margin-left: 0;}
+}
+  
+@media screen and (max-width: 400px) {
+    .sidenav a {
+        text-align: center;
+        float: none;
+    }
 }
 
 .cardContainer {
