--- a/view/layouts/header.html
+++ b/view/layouts/header.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="view/css/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="/view/css/bootstrap/bootstrap.min.css">
   <!-- My css -->
-  <link rel="stylesheet" href="view/css/style.css">
+  <link rel="stylesheet" href="/view/css/style.css">
 
   <title>Time to work!</title>
 </head>
