Updating Api architecture

--- a/view/layouts/header.html
+++ b/view/layouts/header.html
@@ -13,6 +13,9 @@
   <!-- My css -->
   <link rel="stylesheet" href="/view/css/style.css">
 
+  <!-- My js -->
+  <link rel="stylesheet" href="/view/js/index.js">
+
   <title>Time to work!</title>
 </head>
 
